fix: resolve CI PMD violations for ingesta reorder PR
Use String.isBlank, simplify boolean return in IngestaNames, and move PDF response building into DietaPdfService to keep PacienteController under NCSS limit.

Co-authored-by: Cursor <cursoragent@cursor.com>